# dieselgate_service

./: Cargo.toml  Readme.md
src/: calculation_errors.rs  calculation_traits.rs  json_response.rs  main.rs
src/calculators/: mod.rs  people_car.rs
