[package]
name = "dieselgate_service"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Gał <dev@krzysztofgal.pl>"]

[dependencies]
axum = "0.5.15"
tokio = { version = "1.20.1", features = ["full"] }

bigdecimal = { version = "0.3.0", features = ["serde"] }
thiserror = "1.0.32"
bytes = "1.2.1"
chrono = "0.4.22"

# serialization
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

# logging
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
